--- a/src/settingswidget.ui
+++ b/src/settingswidget.ui
@@ -1,65 +1,142 @@
-<!DOCTYPE UI><UI>
+<!DOCTYPE UI><UI version="3.1" stdsetdef="1">
 <class>SettingsWidget</class>
-<widget>
-    <class>QWidget</class>
-    <property stdset="1">
-        <name>name</name>
+<widget class="QWidget">
+    <property name="name">
         <cstring>settings_widget</cstring>
     </property>
-    <property stdset="1">
-        <name>geometry</name>
+    <property name="geometry">
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>229</width>
-            <height>78</height>
+            <width>475</width>
+            <height>325</height>
         </rect>
     </property>
-    <property stdset="1">
-        <name>caption</name>
+    <property name="caption">
         <string>Form1</string>
     </property>
     <grid>
-        <property stdset="1">
-            <name>margin</name>
-            <number>11</number>
+        <property name="name">
+            <cstring>unnamed</cstring>
         </property>
-        <property stdset="1">
-            <name>spacing</name>
-            <number>6</number>
-        </property>
-        <widget row="0"  column="0" >
-            <class>QCheckBox</class>
-            <property stdset="1">
-                <name>name</name>
+        <widget class="QCheckBox" row="0" column="0" rowspan="1" colspan="2">
+            <property name="name">
                 <cstring>lastProjectCheckbox</cstring>
             </property>
-            <property stdset="1">
-                <name>text</name>
+            <property name="text">
                 <string>Load last project on startup</string>
             </property>
         </widget>
-        <spacer row="1"  column="0" >
-            <property>
-                <name>name</name>
+        <widget class="Line" row="1" column="0" rowspan="1" colspan="2">
+            <property name="name">
+                <cstring>line1</cstring>
+            </property>
+            <property name="frameShape">
+                <enum>HLine</enum>
+            </property>
+            <property name="frameShadow">
+                <enum>Sunken</enum>
+            </property>
+            <property name="orientation">
+                <enum>Horizontal</enum>
+            </property>
+        </widget>
+        <widget class="QLayoutWidget" row="2" column="0">
+            <property name="name">
+                <cstring>layout1</cstring>
+            </property>
+            <grid>
+                <property name="name">
+                    <cstring>unnamed</cstring>
+                </property>
+                <widget class="QPushButton" row="1" column="0">
+                    <property name="name">
+                        <cstring>changeApplicationFontButton</cstring>
+                    </property>
+                    <property name="text">
+                        <string></string>
+                    </property>
+                </widget>
+                <widget class="QLabel" row="1" column="1">
+                    <property name="name">
+                        <cstring>buttonLabel_2</cstring>
+                    </property>
+                    <property name="text">
+                        <string>Application Output Window Font</string>
+                    </property>
+                </widget>
+                <widget class="QLabel" row="0" column="1">
+                    <property name="name">
+                        <cstring>buttonLabel</cstring>
+                    </property>
+                    <property name="text">
+                        <string>Message Window Font</string>
+                    </property>
+                </widget>
+                <widget class="QPushButton" row="0" column="0">
+                    <property name="name">
+                        <cstring>changeMessageFontButton</cstring>
+                    </property>
+                    <property name="sizePolicy">
+                        <sizepolicy>
+                            <hsizetype>3</hsizetype>
+                            <vsizetype>0</vsizetype>
+                            <horstretch>0</horstretch>
+                            <verstretch>0</verstretch>
+                        </sizepolicy>
+                    </property>
+                    <property name="text">
+                        <string></string>
+                    </property>
+                </widget>
+            </grid>
+        </widget>
+        <spacer row="3" column="1">
+            <property name="name">
                 <cstring>Spacer1</cstring>
             </property>
-            <property stdset="1">
-                <name>orientation</name>
+            <property name="orientation">
                 <enum>Vertical</enum>
             </property>
-            <property stdset="1">
-                <name>sizeType</name>
+            <property name="sizeType">
                 <enum>Expanding</enum>
             </property>
-            <property>
-                <name>sizeHint</name>
+            <property name="sizeHint">
                 <size>
                     <width>20</width>
-                    <height>20</height>
+                    <height>130</height>
                 </size>
             </property>
         </spacer>
     </grid>
 </widget>
+<connections>
+    <connection>
+        <sender>changeMessageFontButton</sender>
+        <signal>clicked()</signal>
+        <receiver>settings_widget</receiver>
+        <slot>changeMessageFontSlot()</slot>
+    </connection>
+    <connection>
+        <sender>changeApplicationFontButton</sender>
+        <signal>clicked()</signal>
+        <receiver>settings_widget</receiver>
+        <slot>changeApplicationFontSlot()</slot>
+    </connection>
+</connections>
+<includes>
+    <include location="global" impldecl="in declaration">kfontdialog.h</include>
+    <include location="global" impldecl="in declaration">qfont.h</include>
+    <include location="global" impldecl="in declaration">qpushbutton.h</include>
+    <include location="local" impldecl="in implementation">settingswidget.ui.h</include>
+</includes>
+<variables>
+    <variable access="public">QFont messageFont;</variable>
+    <variable access="public">QFont applicationFont;</variable>
+</variables>
+<slots>
+    <slot>changeMessageFontSlot()</slot>
+    <slot>changeApplicationFontSlot()</slot>
+</slots>
+<layoutdefaults spacing="6" margin="11"/>
 </UI>
