--- a/parts/trollproject/subclassingdlgbase.ui
+++ b/parts/trollproject/subclassingdlgbase.ui
@@ -174,6 +174,15 @@
         <receiver>SubclassingDlgBase</receiver>
         <slot>reject()</slot>
     </connection>
+    <connection>
+        <sender>m_edClassName</sender>
+        <signal>textChanged(const QString&amp;)</signal>
+        <receiver>SubclassingDlgBase</receiver>
+        <slot>onChangedClassName()</slot>
+    </connection>
 </connections>
+<slots>
+    <slot>onChangedClassName()</slot>
+</slots>
 <layoutdefaults spacing="6" margin="11"/>
 </UI>
