* fixed three bugs when removing targets

--- a/parts/autoproject/removefiledlgbase.ui
+++ b/parts/autoproject/removefiledlgbase.ui
@@ -161,7 +161,7 @@
                 </size>
             </property>
             <property name="title">
-                <string>Target Information</string>
+                <string>&amp;File Information</string>
             </property>
             <vbox>
                 <property name="name">
